<resources>

    <string name="app_name">ThunderSnatch</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash_screen">ThunderSnatch</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="user_name">Username:</string>
    <string name="password">Password:</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="signup"><u>Create Account</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="quit">Quit</string>
    <string name="logout">Logout</string>
    <string name="title_activity_create_game">CreateGame</string>
    <string name="title_activity_join_game">JoinGame</string>
    <string name="title_activity_game_options">GameOptions</string>
    <string name="game_type">Game Type: </string>
    <string name="flag_placement">Flag Placement: </string>
    <string name="map_radius">Map Radius:&#160;&#160;&#160;</string>
    <string name="default_radius">800</string>
    <string name="create_game2">Create Game</string>
    <string name="blank"></string>
    <string name="retype_password">Verify Password:</string>
    <string name="sign_up">Need an account? <b>Sign Up</b></string>
    <string name="feet">ft</string>
    <string name="email">Email Address:</string>
    <string name="verify_email">Verify Email:</string>
    <string name="create_account">Create Account</string>
    <string name="max_players">Team Size:&#160;&#160;&#160;</string>
    <string name="default_players">5</string>
    <string name="submit">Submit</string>
    <string name="no_games_available">No available games.</string>
    <string name="add_item">Add item</string>
    <string name="verify_password">Retype Password:</string>
    <string name="red_team">Red Team</string>
    <string name="blue_team">Blue Team</string>
    <string name="map">Map</string>
    <string name="switch_team">Switch Team</string>

    <string-array name="game_types">
        <item>Matchmade</item>
        <item>Manual</item>
    </string-array>
    <string-array name="flag_placement">
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>

    <string name="title_activity_game_lobby">GameLobby</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_in_game">InGame</string>
    <string name="title_activity_play_game">PlayGame</string>
    <string name="title_activity_game_browser">GameBrowser</string>
    <string name="title_activity_reset_password">ResetPassword</string>

</resources>