<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:scaleType="fitXY"
        android:src="@drawable/reset_password" >
    </ImageView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dip"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="35dip"
        android:layout_marginTop="10dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/scroll_bg"
            android:orientation="vertical"
            android:padding="20dip" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/editText1"
				android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="true"
                android:textSize="25sp" />
            
            <TextView
                android:id="@+id/textView2"
                android:text="@string/verify_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/editText2"
				android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="true"
                android:textSize="25sp"
                android:inputType="textPassword" />
            
            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/submit" />

        </LinearLayout>
        
    </ScrollView>

</LinearLayout>